--- a/TestAModelFolder/ML/CrystallineMLAlone.ipynb
+++ b/TestAModelFolder/ML/CrystallineMLAlone.ipynb
@@ -5648,6 +5648,7 @@
     "        else:\n",
     "            log_message(f\"Folder does not exist: {folder_to_delete}\")\n",
     "        output_folder = Path(\"..\") / \"ML\" / \"Tests\" / f\"CrystallineAllTestsFolder_NOVALNOLOSS{Complexity}_{num_augmentations}\"\n",
+    "        output_folder.mkdir(parents=True, exist_ok=True)\"\n",
     "        isolate_experiments(\n",
     "            long_path(data_dir),\n",
     "            long_path(isolated_dir),\n",
