--- a/TestAModelFolder/ML/AmorphousMLAlone.ipynb
+++ b/TestAModelFolder/ML/AmorphousMLAlone.ipynb
@@ -691,7 +691,8 @@
    "source": [
     "def Define_Complexity(Complexity):\n",
     "    \"\"\"\n",
-    "    Arguments: \n",
+    "    Parameters \n",
+    "    ---------- \n",
     "        Complexity (str): It is the name of the model\n",
     "    Output: \n",
     "        None, but it defines the model architecture. It can be accessed outside of this function by calling build_model (once Definde_Complexity has ran)\n",
