--- a/CreateModels/FileReadingStoring/AmorphousFileLectureCreate.ipynb
+++ b/CreateModels/FileReadingStoring/AmorphousFileLectureCreate.ipynb
@@ -201,10 +201,12 @@
     "\n",
     "def log_message(message):\n",
     "    \"\"\"\n",
-    "    Arguments: \n",
+    "    Parameters \n",
+    "    ---------- \n",
     "        message (string): The text that will be logged\n",
     "    \n",
-    "    Returns:\n",
+    "    Returns \n",
+    "    ------- \n",
     "        None\n",
     "        \n",
     "    Notes:\n",
@@ -220,10 +222,12 @@
     "        \n",
     "def long_path(path):\n",
     "    \"\"\"\n",
-    "    Arguments:\n",
+    "    Parameters \n",
+    "    ---------- \n",
     "        path (path): The path that needs to be converted\n",
     "\n",
-    "    Returns:\n",
+    "    Returns \n",
+    "    ------- \n",
     "        The updated path string or path depending on the platform used\n",
     "\n",
     "    Notes:\n",
@@ -286,11 +290,13 @@
    "source": [
     "def Time(Day_Ref, Hour_Ref):\n",
     "    \"\"\"\n",
-    "    Arguments: \n",
+    "    Parameters \n",
+    "    ---------- \n",
     "        Day_Ref (str): 'DD/MM/YY' a.k.a Day/Month/Year\n",
     "        Hour_Ref (str): = 'HH:MM' or 'HH:MM:SS' a.k.a Hour:Month:Second\n",
     "        \n",
-    "    Returns:\n",
+    "    Returns \n",
+    "    ------- \n",
     "        A 'datetime' object with format (year, month, day, hour, minute, second).\n",
     "        \n",
     "    Notes:\n",
@@ -327,12 +333,14 @@
     "\n",
     "def deltatime(AIni,BIni, AFin,BFin):\n",
     "    \"\"\"\n",
-    "    Arguments: \n",
+    "    Parameters \n",
+    "    ---------- \n",
     "        AIni (str): 'DD/MM/YY' a.k.a Day/Month/Year for the initial time\n",
     "        BIni (str): = 'HH:MM' or 'HH:MM:SS' a.k.a Hour:Month:Second for the initial time\n",
     "        AFin (str): 'DD/MM/YY' a.k.a Day/Month/Year for the final time\n",
     "        BFin (str): = 'HH:MM' or 'HH:MM:SS' a.k.a Hour:Month:Second for the final time\n",
-    "    Returns:\n",
+    "    Returns \n",
+    "    ------- \n",
     "        The time variation in seconds\n",
     "        \n",
     "    Notes:\n",
@@ -347,10 +355,12 @@
     "\n",
     "def format_combination(comb):\n",
     "    \"\"\"\n",
-    "    Arguments: \n",
+    "    Parameters \n",
+    "    ---------- \n",
     "        comb (float, float, float): A set of three floats characterizing the Miller indices.\n",
     "\n",
-    "    Returns:\n",
+    "    Returns \n",
+    "    ------- \n",
     "        An object (int,int,int): With the floor integer of those float variables. (3.0 -> 3)\n",
     "    \"\"\"\n",
     "    \n",
@@ -363,9 +373,11 @@
     "\n",
     "def sanitize(name):\n",
     "    \"\"\"\n",
-    "    Arguments: \n",
+    "    Parameters \n",
+    "    ---------- \n",
     "        name (str): Directory string \n",
-    "    Returns:\n",
+    "    Returns \n",
+    "    ------- \n",
     "        The same string but with symbols [,<,>,:,\",/,\\\\,|,?,*,] converted to _\n",
     "    \"\"\"\n",
     "    \n",
@@ -375,9 +387,11 @@
     "\n",
     "def savgol_params_func(n_points):\n",
     "    \"\"\"\n",
-    "    Arguments: \n",
+    "    Parameters \n",
+    "    ---------- \n",
     "        n_points (int): Number of points where the filtered will be used\n",
-    "    Returns:\n",
+    "    Returns \n",
+    "    ------- \n",
     "        A dictionary containing valid parameters for a Savitzky–Golay filter.\n",
     "    Notes:    \n",
     "        It ensures that the window length is odd and large enough for the polynomial order.\n",
@@ -395,7 +409,8 @@
     "\n",
     "def Overall_Decrease(df_filtered):\n",
     "    \"\"\"\n",
-    "    Arguments: \n",
+    "    Parameters \n",
+    "    ---------- \n",
     "        df_filtered (pandas object): It is something like this:\n",
     "                1    2    3  PolarizationD3  ErrPolarizationD3  DeltaTime  \n",
     "            0  3.0  3.0  3.0          0.5552             0.0022          0   \n",
@@ -403,7 +418,8 @@
     "            2  3.0  3.0  3.0          0.5464             0.0022       4148\n",
     "            ...\n",
     "        \n",
-    "    Returns:\n",
+    "    Returns \n",
+    "    ------- \n",
     "        True if df_filtered shows a decay and False otherwise\n",
     "        \n",
     "    Notes:    \n",
@@ -437,7 +453,8 @@
     "\n",
     "def filter_best_combination(i, df):\n",
     "    \"\"\"\n",
-    "    Arguments: \n",
+    "    Parameters \n",
+    "    ---------- \n",
     "        1. i (int): The chunk number a.k.a the (ordinal) number of the Miller index combination\n",
     "        2. df (pandas object): It is something like this: (NaNs are intended)\n",
     "                  1    2    3  PolarizationD3 ErrPolarizationD3  12   13   14  DeltaTime\n",
@@ -446,7 +463,8 @@
     "            2   3.0  3.0  3.0          0.5315            0.0022 NaN  NaN  NaN       3919\n",
     "            ...\n",
     "\n",
-    "    Returns:\n",
+    "    Returns \n",
+    "    ------- \n",
     "        1. A filtered df object like this one:\n",
     "                  1    2    3  PolarizationD3 ErrPolarizationD3 DeltaTime\n",
     "            0   3.0  3.0  3.0          0.5383            0.0021         0\n",
@@ -591,7 +609,8 @@
     "\n",
     "def RemoveOutcast_FixUncertainty(df_filtered, PrettyCombination, filename, AcceptableMultiplier=2.0):\n",
     "    \"\"\"\n",
-    "    Arguments: \n",
+    "    Parameters \n",
+    "    ---------- \n",
     "        1. df_filtered (pandas object): It is something like this:\n",
     "                  1    2    3  PolarizationD3 ErrPolarizationD3 DeltaTime\n",
     "            0   3.0  3.0  3.0          0.5383            0.0021         0\n",
@@ -602,7 +621,8 @@
     "        3. filename (str): The name used to save the data. For example: f\"PolarizationD3_{folder_name}_{DD}/{MM}/{YY}_{i}_MillerIndex_{PrettyCombination}\"\n",
     "        4. AcceptableMultiplier\n",
     "\n",
-    "    Returns:\n",
+    "    Returns \n",
+    "    ------- \n",
     "        1. A filtered df object like this one:\n",
     "                  1    2    3  PolarizationD3 ErrPolarizationD3 DeltaTime\n",
     "            0   3.0  3.0  3.0          0.5383            0.0021         0\n",
